Move components to pop up menu; add superscript, subscript

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -14,7 +14,7 @@ api.onToolbarCreate(toolbar => {
         id: "strikethrough_button",
         group: "fontStyles",
         icon: "strikethrough",
-        perform: e => e.applySurround('<s>', '</s>', 'strikethrough_prompt')
+        perform: e => e.applySurround('<s>', '</s>', 'strikethrough_text')
     });
 });
 api.onToolbarCreate(toolbar => {
@@ -41,22 +41,46 @@ api.onToolbarCreate(toolbar => {
         perform: e => e.applySurround('[wrap="justify"]\n', '\n[/wrap]', 'align_justify_text')
     });
 });
-api.onToolbarCreate(toolbar => {
-    toolbar.addButton({
-        id: "columns_button",
-        group: "extras",
-        icon: "columns",
-        perform: e => e.applySurround('[wrap="columns"]\n', '\n[/wrap]', 'columns_text')
-    });
+
+// EXTRAS
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "floatleft",
+      icon: "indent",
+      label: "float_left_button"
+  };
 });
-api.onToolbarCreate(toolbar => {
-    toolbar.addButton({
-        id: "float_left_button",
-        group: "extras",
-        icon: "indent",
-        perform: e => e.applySurround('[wrap="floatl"]\n', '\n[/wrap]', 'float_left_text')
-    });
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "columns",
+      icon: "columns",
+      label: "columns_button"
+  };
 });
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "superscript",
+      icon: "superscript",
+      label: "superscript_button"
+  };
+});
+api.modifyClass("controller:composer", {
+  actions: {
+    floatleft() {
+      this.get("toolbarEvent").applySurround('[wrap="floatl"]\n', '\n[/wrap]', "float_left_text");
+    },
+	columns() {
+	  this.get("toolbarEvent").applySurround('[wrap="columns"]\n'), '\n[/wrap]', "columns_text"));
+	},
+	superscript() {
+	  this.get("toolbarEvent").applySurround("<sup>", "</sub>", "superscript_text");
+	},
+	subscript() {
+      this.get("toolbarEvent").applySurround("<sub>", "</sub>", "suvscript_text");
+    }
+  }
+});
+
 // TEXTS
 let translations = I18n.translations[I18n.currentLocale()].js;
 if (!translations) {
@@ -80,7 +104,13 @@ translations.composer.align_justify_text =
   settings.align_justify_text;
 translations.strikethrough_button = settings.strikethrough_button;
 translations.composer.strikethrough_prompt =
-  settings.strikethrough_prompt;
+  settings.strikethrough_text;
+translations.superscript_button = settings.superscript_button;
+translations.composer.superscript_text =
+  settings.superscript_text;
+translations.subscript_button = settings.subscript_button;
+translations.composer.subscript_prompt =
+  settings.subscript_text;
 translations.composer.columns_button_title = settings.columns_button;
 translations.composer.columns_text =
   settings.columns_text;
