--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -64,6 +64,13 @@ api.addToolbarPopupMenuOptionsCallback(() => {
       label: "superscript_button"
   };
 });
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "subscript",
+      icon: "subscript",
+      label: "subscript_button"
+  };
+});
 api.modifyClass("controller:composer", {
   actions: {
     floatleft() {
@@ -91,8 +98,7 @@ if (!translations.composer) {
 }
 translations.composer.underline_button_title = settings.underline_button;
 translations.composer.underline_text =
-  settings.underline_text;
-  
+  settings.underline_text; 
 translations.composer.align_center_button_title = settings.align_center_button;
 translations.composer.align_center_text =
   settings.align_center_text;
@@ -103,13 +109,13 @@ translations.composer.align_justify_button_title = settings.align_justify_button
 translations.composer.align_justify_text =
   settings.align_justify_text;
 translations.strikethrough_button = settings.strikethrough_button;
-translations.composer.strikethrough_prompt =
+translations.composer.strikethrough_text =
   settings.strikethrough_text;
 translations.superscript_button = settings.superscript_button;
 translations.composer.superscript_text =
   settings.superscript_text;
 translations.subscript_button = settings.subscript_button;
-translations.composer.subscript_prompt =
+translations.composer.subscript_text =
   settings.subscript_text;
 translations.composer.columns_button_title = settings.columns_button;
 translations.composer.columns_text =
