--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -77,7 +77,7 @@ api.modifyClass("controller:composer", {
       this.get("toolbarEvent").applySurround('[wrap="floatl"]\n', '\n[/wrap]', "float_left_text");
     },
 	columns() {
-	  this.get("toolbarEvent").applySurround('[wrap="columns"]\n'), '\n[/wrap]', "columns_text"));
+	  this.get("toolbarEvent").applySurround('[wrap="columns"]\n', '\n[/wrap]', "columns_text");
 	},
 	superscript() {
 	  this.get("toolbarEvent").applySurround("<sup>", "</sub>", "superscript_text");
