Button label corrections.

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -101,29 +101,38 @@ if (!translations.composer) {
 }
 translations.composer.underline_button_title = settings.underline_button;
 translations.composer.underline_text =
-  settings.underline_text; 
+  settings.underline_text;
+
 translations.composer.align_center_button_title = settings.align_center_button;
 translations.composer.align_center_text =
   settings.align_center_text;
+
 translations.composer.align_right_button_title = settings.align_right_button;
 translations.composer.align_right_text =
   settings.align_right_text;
+
 translations.composer.align_justify_button_title = settings.align_justify_button;
 translations.composer.align_justify_text =
   settings.align_justify_text;
+
 translations.strikethrough_button = settings.strikethrough_button;
 translations.composer.strikethrough_text =
   settings.strikethrough_text;
+
 translations.superscript_button = settings.superscript_button;
 translations.composer.superscript_text =
   settings.superscript_text;
+
 translations.subscript_button = settings.subscript_button;
 translations.composer.subscript_text =
   settings.subscript_text;
-translations.composer.columns_button_title = settings.columns_button;
+
+translations.composer.columns_button = settings.columns_button;
 translations.composer.columns_text =
   settings.columns_text;
-translations.composer.float_left_button_title = settings.float_left_button;
+
+translations.composer.float_left_button = settings.float_left_button;
 translations.composer.float_left_text =
   settings.float_left_text;
+ 
 </script>
