--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -99,6 +99,7 @@ if (!translations) {
 if (!translations.composer) {
   translations.composer = {};
 }
+
 translations.composer.underline_button_title = settings.underline_button;
 translations.composer.underline_text =
   settings.underline_text;
@@ -115,23 +116,23 @@ translations.composer.align_justify_button_title = settings.align_justify_button
 translations.composer.align_justify_text =
   settings.align_justify_text;
 
-translations.strikethrough_button = settings.strikethrough_button;
+translations.strikethrough_button_title = settings.strikethrough_button;
 translations.composer.strikethrough_text =
   settings.strikethrough_text;
 
-translations.superscript_button = settings.superscript_button;
+translations.superscript_button_title = settings.superscript_button;
 translations.composer.superscript_text =
   settings.superscript_text;
 
-translations.subscript_button = settings.subscript_button;
+translations.subscript_button_title = settings.subscript_button;
 translations.composer.subscript_text =
   settings.subscript_text;
 
-translations.composer.columns_button = settings.columns_button;
+translations.composer.columns_button_title = settings.columns_button;
 translations.composer.columns_text =
   settings.columns_text;
 
-translations.composer.float_left_button = settings.float_left_button;
+translations.composer.float_left_button_title = settings.float_left_button;
 translations.composer.float_left_text =
   settings.float_left_text;
  
