--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -128,11 +128,11 @@ translations.subscript_button = settings.subscript_button;
 translations.composer.subscript_text =
   settings.subscript_text;
 
-translations.composer.columns_button = settings.columns_button;
+translations.columns_button = settings.columns_button;
 translations.composer.columns_text =
   settings.columns_text;
 
-translations.composer.float_left_button = settings.float_left_button;
+translations.float_left_button = settings.float_left_button;
 translations.composer.float_left_text =
   settings.float_left_text;
  
