More label correction.

--- a/mobile/head_tag.html
+++ b/mobile/head_tag.html
@@ -101,7 +101,7 @@ translations.composer.underline_text =
   settings.underline_text;
 
 translations.align_center_button_title = settings.align_center_button;
-translations.composer.align_center_text =
+translations.align_center_text =
   settings.align_center_text;
 
 translations.align_right_button_title = settings.align_right_button;
@@ -109,27 +109,27 @@ translations.align_right_text =
   settings.align_right_text;
 
 translations.align_justify_button_title = settings.align_justify_button;
-translations.composer.align_justify_text =
+translations.align_justify_text =
   settings.align_justify_text;
 
 translations.strikethrough_button = settings.strikethrough_button;
-translations.composer.strikethrough_text =
+translations.strikethrough_text =
   settings.strikethrough_text;
 
 translations.superscript_button = settings.superscript_button;
-translations.composer.superscript_text =
+translations.superscript_text =
   settings.superscript_text;
 
 translations.subscript_button = settings.subscript_button;
-translations.composer.subscript_text =
+translations.subscript_text =
   settings.subscript_text;
 
 translations.columns_button = settings.columns_button;
-translations.composer.columns_text =
+translations.columns_text =
   settings.columns_text;
 
 translations.float_left_button = settings.float_left_button;
-translations.composer.float_left_text =
+translations.float_left_text =
   settings.float_left_text;
  
 </script>
