More label correction.

--- a/mobile/head_tag.html
+++ b/mobile/head_tag.html
@@ -100,15 +100,15 @@ translations.composer.underline_button_title = settings.underline_button;
 translations.composer.underline_text =
   settings.underline_text;
 
-translations.align_center_button_title = settings.align_center_button;
+translations.align_center_button = settings.align_center_button;
 translations.align_center_text =
   settings.align_center_text;
 
-translations.align_right_button_title = settings.align_right_button;
+translations.align_right_button = settings.align_right_button;
 translations.align_right_text =
   settings.align_right_text;
 
-translations.align_justify_button_title = settings.align_justify_button;
+translations.align_justify_button = settings.align_justify_button;
 translations.align_justify_text =
   settings.align_justify_text;
 
