Fix button default texts.

--- a/mobile/head_tag.html
+++ b/mobile/head_tag.html
@@ -101,35 +101,35 @@ translations.composer.underline_text =
   settings.underline_text;
 
 translations.align_center_button = settings.align_center_button;
-translations.align_center_text =
+translations.composer.align_center_text =
   settings.align_center_text;
 
 translations.align_right_button = settings.align_right_button;
-translations.align_right_text =
+translations.composer.align_right_text =
   settings.align_right_text;
 
 translations.align_justify_button = settings.align_justify_button;
-translations.align_justify_text =
+translations.composer.align_justify_text =
   settings.align_justify_text;
 
 translations.strikethrough_button = settings.strikethrough_button;
-translations.strikethrough_text =
+translations.composer.strikethrough_text =
   settings.strikethrough_text;
 
 translations.superscript_button = settings.superscript_button;
-translations.superscript_text =
+translations.composer.superscript_text =
   settings.superscript_text;
 
 translations.subscript_button = settings.subscript_button;
-translations.subscript_text =
+translations.composer.subscript_text =
   settings.subscript_text;
 
 translations.columns_button = settings.columns_button;
-translations.columns_text =
+translations.comoposer.columns_text =
   settings.columns_text;
 
 translations.float_left_button = settings.float_left_button;
-translations.float_left_text =
+translations.composer.float_left_text =
   settings.float_left_text;
  
 </script>
