--- a/mobile/head_tag.html
+++ b/mobile/head_tag.html
@@ -125,7 +125,7 @@ translations.composer.subscript_text =
   settings.subscript_text;
 
 translations.columns_button = settings.columns_button;
-translations.comoposer.columns_text =
+translations.composer.columns_text =
   settings.columns_text;
 
 translations.float_left_button = settings.float_left_button;
