Update with Commits from Original

--- a/mobile/head_tag.html
+++ b/mobile/head_tag.html
@@ -150,7 +150,7 @@
            this.get("toolbarEvent").applySurround("<s>", "</s>", "strikethrough_text");
          },
      	superscript() {
-           this.get("toolbarEvent").applySurround("<sup>", "</sub>", "superscript_text");
+           this.get("toolbarEvent").applySurround("<sup>", "</sup>", "superscript_text");
          },
          subscript() {
            this.get("toolbarEvent").applySurround("<sub>", "</sub>", "subscript_text");
